resolve problem of overflow on main pane

--- a/Stylesheet/main-pane.css
+++ b/Stylesheet/main-pane.css
@@ -1,9 +1,8 @@
 
 #main-pane{
     position:absolute;
-}
-
-#main-pane{
+    overflow-x:hidden;
+    overflow-y:scroll;
     padding-left: calc(3em + 15px);
     height:100%;
 }
